css/style.scss
@import "reset", "bourbon", "neat";

*, *:before, *:after {
  -moz-box-sizing: border-box;
  -webkit-box-sizing: border-box;
  box-sizing: border-box;
}

$smoke: #15181A;
$navy: #152B3C;
$blue: #85C6D6;
$light: #FCFCFC;
$animation-delay: .5s;

.wf-loading { visibility: hidden }
.wf-active { visibility: visible }

@mixin debug($color) {
  border: 1px $color solid;
}

@mixin aspect-ratio($width, $height) {
  position: relative;
  &:before {
    display: block;
    content: "";
    width: 100%;
    padding-top: ($height / $width) * 100%;
  }
  > .inner {
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
  }
}

body {
  text-rendering: optimizeLegibility;
  @include font-feature-settings("liga", "dlig", "onum", "pnum", "salt", "swsh");
  font-family: "leitura-news", Georgia, serif;
  font-weight: 400;
  font-size: 1.5rem;
  line-height: 1.5em;
  background: $smoke;
  color: $light;
}

.disableFFS {
  @include font-feature-settings("liga" 0, "dlig" 0, "onum" 0, "pnum" 0, "salt" 0, "swsh" 0);
}

.enableOrdn {
  @include font-feature-settings("ordn");
}

em { font-style: italic }

::selection {
  color: $light;
  background: $blue;
}

.bg {
  opacity: 0;
  background-image: url("../media/malika.jpg");
  background-size: cover;
  background-position: 10% 100%;
  background-attachment: fixed;
  height: 100vh;
  width: 100%;
  @include animation(in .8s cubic-bezier(1,0,.75,.75) $animation-delay forwards);
  &:after {
    content: '';
    position: absolute;
    left: 0;
    top: 0;
    width: 100%;
    height: 100%;
    @include background-image(linear-gradient(rgba(21,24,26,0) 50%, rgba(21,24,26,1) 96%));
  }
}

header {
  margin: calc(100vh - 500px) 3.5rem 0;
  height: 500px;
  position: absolute;
  top: 0;
  p {
    margin-top: 2.3em;
    opacity: 0;
    @include animation(in .8s cubic-bezier(1,0,.75,.75) ($animation-delay + .8s) forwards);
    max-width: 600px;
  }
}

main {
  @include outer-container;
  padding: 0 3.5rem;
  margin: 0;
  width: 100%;
  // word-break: keep-all;
  // hyphens: auto;
}

p.dropcap:first-of-type:first-letter {
  float: left;
  font-size: 4rem;
  line-height: 4rem;
  margin: 0 .8rem 0 0;
}

nav {
  color: rgba(0,0,0,0);
  position: relative;
  margin: -4rem auto 3.5rem;
  height: 5rem;
  &:before {
    content: '';
    position: absolute;
    top: 0;
    left: 0;
    opacity: 0;
    height: 1px;
    background: $light;
    @include animation(navGrowRight .9s cubic-bezier(1,0,.75,.75) ($animation-delay + .8s) forwards);
  }
  &:after {
    content: '';
    position: absolute;
    top: 0;
    left: 0;
    opacity: 0;
    height: 1px;
    width: 100%;
    background: $light;
    @include animation(navExpandDown .3s cubic-bezier(1,0,.75,.75) ($animation-delay + 1.7s) forwards);
  }
  li {
    display: block;
    text-align: center;
    font-family: estilo-pro;
    font-size: 1.2em;
    font-weight: 100;
    letter-spacing: .2rem;
    line-height: 5rem;
    opacity: 0;
    color: $light;
    & a {
      color: $light;
      text-decoration: none;
      display: block;
      margin-top: 2px;
      cursor: pointer;
      transition: all .2s ease-in;
      &:after {
        content: '';
        position: absolute;
        bottom: 1.1rem;
        @include transform(scale(0.2));
        height: 1px;
        background: $light;
        @include span-columns(2);
        @include shift(1);
        transition: all .3s cubic-bezier(1,0,.75,.75);
      }
      &:hover {
        transition: all .2s ease-in;
        color: $blue;
        &:after {
          @include transform(scale(1));
          background: $blue;
        }
      }
    }
    &:first-of-type {
      @include animation(in .3s cubic-bezier(1,0,.75,.75) ($animation-delay + 1.9s) forwards);
    }
    &:nth-of-type(2) {
      @include animation(in .3s cubic-bezier(1,0,.75,.75) ($animation-delay + 2s) forwards);
    }
    &:nth-of-type(3) {
      @include animation(in .3s cubic-bezier(1,0,.75,.75) ($animation-delay + 2.1s) forwards);
    }
    @include span-columns(4);
  }
  @include span-columns(12);
  // @include media(max-width 1280px) {
  //   @include span-columns(12);
  // }
}

.about {
  opacity: 0;
  background: $light;
  color: $navy;
  position: relative;
  top: 1rem;
  margin: 0 auto;
  @include animation(aboutIn .3s ease-out ($animation-delay + 2.5s) forwards);
  padding: 3.5rem;
  h3:after { background: $navy }
  @include span-columns(8);
  @include media(max-width 1280px) {
    @include span-columns(12);
  }
}

.experience {
  font-size: 1rem;
  position: relative;
  padding-top: 164px;
  color: shade($light, 20%);
  div {
    &:not(:first-of-type) { padding-top: 3.5rem }
    width: 100%;
    max-width: 360px;
    top: 1rem;
    opacity: 0;
    &:first-of-type {
      @include animation(in .3s cubic-bezier(1,0,.75,.75) ($animation-delay + 2.7s) forwards);
    }
    &:nth-of-type(2) {
      @include animation(in .3s cubic-bezier(1,0,.75,.75) ($animation-delay + 2.8s) forwards);
    }
    &:nth-of-type(3) {
      @include animation(in .3s cubic-bezier(1,0,.75,.75) ($animation-delay + 2.9s) forwards);
    }
  }
  h3 {
    text-align: left;
    font-weight: 100;
    font-size: 1.5rem;
    margin: 0;
    line-height: 1.5rem;
    letter-spacing: .2rem;
    &:after {
      left: 1px;
      bottom: -.25rem;
      background: shade($light, 20%);
      @include media(max-width 1280px) { background: tint($navy, 20%) }
    }
  }
  a {
    position: static;
    display: inline-block;
    color: shade($light, 20%);
    text-decoration: underline;
    font-style: italic;
    &:after { display: none }
    @include media(max-width 1280px) { color: tint($navy, 20%) }
  }
  @include span-columns(4);
  @include omega();
  @include media(max-width 1280px) {
    @include span-columns(12);
    padding: 0 3.5rem 3.5rem 3.5rem;
    background: $light;
    color: tint($navy, 20%);
    top: 1rem;
    opacity: 0;
    @include animation(aboutIn .3s ease-out ($animation-delay + 2.5s) forwards);
  }
}

.works {
  opacity: 0;
  @include animation(in .3s cubic-bezier(1,0,.75,.75) ($animation-delay + 3s) forwards);
  margin-top: 3.5rem;
  @include media(max-width 800px) { margin-top: 2.8rem }
  background-size: 100%;
  position: relative;
  padding: 3.5rem;
  a { color: $light; &:after { background: $light } }
  @include span-columns(8);
  @include media(max-width 1280px) {
    @include span-columns(12);
  }
}

p {
  margin: 1.6em 0;
  &:last-of-type { margin-bottom: 0 }
  a {
    color: $navy;
    text-decoration: none;
    position: relative;
    cursor: pointer;
    transition: all .2s ease-in;
    &:after {
      content: '';
      position: absolute;
      bottom: .25rem;
      left: 0;
      height: 1px;
      background: $navy;
      width: 100%;
      transition: all .2s cubic-bezier(1,0,.75,.75);
    }
    &:hover {
      transition: all .2s ease-in;
      color: $blue;
      &:after {
        height: 3px;
        bottom: 0;
        background: $blue;
      }
    }
  }
}

h1 {
  font-family: "acta-display";
  font-weight: 900;
  font-size: 6.3rem;
  line-height: 11rem;
  opacity: 0;
  @include animation(in .8s cubic-bezier(1,0,.75,.75) ($animation-delay + .6s) forwards);
}

h2 {
  font-family: "acta-display";
  font-weight: 700;
  font-size: 4.2rem;
  line-height: 4rem;
  opacity: 0;
  @include animation(in .8s cubic-bezier(1,0,.75,.75) ($animation-delay + .7s) forwards);
}

h3 {
  position: relative;
  font-family: "estilo-pro";
  font-weight: 500;
  font-size: 3rem;
  line-height: 4rem;
  letter-spacing: .3rem;
  text-align: center;
  &:after {
    content: "";
    position: absolute;
    width: 5%;
    height: 1px;
    left: calc(50% - 2.5%);
    bottom: 0;
    background: $light;
  }
}

footer {
  opacity: 0;
  @include animation(in .3s cubic-bezier(1,0,.75,.75) ($animation-delay + 3s) forwards);
  border-top: 1px $light solid;
  margin: 3.5rem 0;
  font-size: 1rem;
  position: relative;
  @include span-columns(12);
  color: shade($light, 20%);
  div {
    padding-top: 3.5rem;
    @include span-columns(4);
  }
  h3 {
    text-align: left;
    font-weight: 100;
    font-size: 1.5rem;
    margin: 0;
    line-height: 1.5rem;
    letter-spacing: .2rem;
    &:after {
      left: 1px;
      bottom: -.25rem;
      background: shade($light, 20%);
    }
  }
  a {
    position: static;
    display: inline-block;
    color: shade($light, 20%);
    text-decoration: underline;
    font-style: italic;
    &:after { display: none }
  }
}

@media screen and (min-height: 760px) {
  header {
    top: -100px;
  }
  main {
    margin-top: -100px;
  }
}

@media screen and (min-height: 1000px) {
  header {
    top: -200px;
  }
  main {
    margin-top: -200px;
  }
}

@media screen and (max-width: 800px) {
  p {
    font-size: .85em;
    line-height: 1.8em;
  }
  h2 {
    font-size: 3.2rem;
    line-height: .8em;
    letter-spacing: 0;
  }
  .bg {
    background-position: 30% 100%;
    height: 95vh;
  }
  header {
    margin: calc(95vh - 410px) 2.8rem 0;
    height: 410px;
    p {
      max-width: 500px;
    }
  }
  main {
    padding: 0 2.8rem;
    nav {
      margin: -1rem auto 2.8rem;
    }
    .about {
      padding: 2.8rem;
    }
    .works { padding: 2.8rem }
  }
  p.dropcap:first-of-type:first-letter {
    font-size: 3.5rem;
    line-height: 3.8rem;
    margin: 0 .7rem 0 0;
  }
  footer {
    margin: 2.8rem 0;
  }
  .experience {
    div:not(:first-of-type) { padding-top: 2.8rem }
    padding: 0 2.8rem 2.8rem 2.8rem;
  }
}

@media screen and (max-width: 750px) {
  footer div {
    clear: both;
    padding: 3rem 0;
    max-width: 300px;
    @include span-columns(12);
    &:not(:first-of-type) { padding-top: 0 }
    &:last-of-type { padding-bottom: 0 }
  }
}

@media screen and (max-width: 600px) {
  p {
    font-size: .7em;
    line-height: 1.8em;
  }
  h1 {
    font-size: 5rem;
    line-height: 1.6em;
  }
  h2 {
    font-size: 2.1rem;
    line-height: .8em;
    letter-spacing: 0;
  }
  .bg {
    background-image: url("../media/malikamobile.jpg");
    background-position: 20% 100%;
    height: 75vh;
    &:after {
      @include background-image(linear-gradient(rgba(21,24,26,0) 50%, rgba(21,24,26,1) 75%));
    }
  }
  header {
    margin: calc(75vh - 250px) 2.8rem 0;
    height: 360px;
    p {
      max-width: 280px;
    }
  }
  main {
    padding: 0 0 2.8rem 0;
    nav {
      margin: 5rem auto 1px;
      li { font-size: 1em; letter-spacing: .1rem; }
      &:after { display: none }
    }
    .about {
      padding: 1rem;
    }
    p.dropcap:first-of-type:first-letter {
      font-size: 3rem;
      line-height: 3.2rem;
      margin: 0 .6rem 0 0;
    }
    .works { padding: 1rem }
  }

  footer {
    margin: 2.8rem 0 0;
    padding: 0 1rem;
    font-size: 1.3rem;
    div { padding: 2.8rem 0 }
  }
  .experience {
    font-size: 1.3rem;
    padding: 1.8rem 1rem 2.8rem 1rem;
  }
}

@media screen and (max-width: 374px) {
  main {
    nav {
      margin: 6rem auto 0;
      li { font-size: 1.2rem }
    }
    h3 { font-size: 2.5rem }
  }
}

@include keyframes(in) {
  0% { opacity: 0 }
  100% { opacity: 1 }
}

@include keyframes(aboutIn) {
  0% { top: 1rem; opacity: 0; }
  100% { top: 0; opacity: 1; }
}

@include keyframes(navGrowRight) {
  0% { width: 0; opacity: 0; }
  100% { width: 100%; opacity: 1; }
}

@include keyframes(navExpandDown) {
  0% { top: 0 }
  50% { opacity: 0 }
  100% { top: 5rem; opacity: 1; }
}

